espresso and UI automated test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,11 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    // for espresso test
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    // for ui automator test
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.3.0'
 }
