--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
         android:theme="@style/Theme.QuickCash"
         tools:targetApi="31">
         <activity
-            android:name=".JobSearchResults"
+            android:name=".JobDetailsView"
             android:exported="false" />
         <activity
-            android:name=".JobPosting"
+            android:name=".EmployeeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EmployerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".CreateJobPosting"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
