--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".LoginActivity"
             android:exported="true" />
         <activity
-            android:name=".Registration"
+            android:name=".RegistrationActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
