--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.QuickCash"
         tools:targetApi="31">
         <activity
-            android:name=".JobDetailsView"
+            android:name=".JobDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".EmployeeActivity"
@@ -22,7 +22,7 @@
             android:name=".EmployerActivity"
             android:exported="true" />
         <activity
-            android:name=".CreateJobPosting"
+            android:name=".JobPostingActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
