--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.QuickCash"
         tools:targetApi="31">
         <activity
-            android:name=".PasswordReset"
+            android:name=".ResetPasswordActivity"
             android:exported="true" />
         <activity
             android:name=".EmployeeActivity"
