--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,19 @@
         tools:targetApi="31">
         <activity
             android:name=".ResetPasswordActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".EmployeeActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".EmployerActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".RegistrationActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true" >
