--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.quickcash"
-        minSdk 30
+        minSdk 33
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -50,6 +50,8 @@ dependencies {
     implementation libs.play.services.auth
 
     testImplementation libs.junit
+    testImplementation libs.androidx.core
+    testImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.espresso.core
 
