added Applicant object, ApplicantAdapter, and ApplicantDetailsActivity, along with the UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,13 @@
         <activity
             android:name=".JobPostingActivity"
             android:exported="true" />
-        <activity android:name=".JobApplicantsActivity"
+        <activity
+            android:name=".JobApplicantsActivity"
             android:exported="false"/>
+        <activity
+            android:name=".ApplicantDetailsActivity"
+            android:exported="false"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true">
