JUnit tests to test if Employer can mark an applicant as "Shortlisted" or "Rejected".

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation libs.play.services.auth
 
     testImplementation libs.junit
+    testImplementation libs.mockito.core
+
     testImplementation libs.androidx.core
     testImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.junit
