--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     // Google Play Services Auth
     implementation libs.play.services.auth
+    implementation libs.firebase.storage
 
     testImplementation libs.junit
     testImplementation libs.androidx.core
