Implemented UI including buttons and pages to view applications and their status

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.QuickCash"
         tools:targetApi="31">
         <activity
+            android:name=".EmployeeShortlistedActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EmployeeApplicationsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ResetPasswordActivity"
             android:exported="false" />
         <activity
