--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ uiautomator = "2.3.0"
 googleGmsGoogleServices = "4.4.2"
 core = "1.6.1"
 firebaseStorage = "21.0.1"
+playServicesMaps = "19.0.0"
 
 [libraries]
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
@@ -40,6 +41,7 @@ androidx-test-runner = { group = "androidx.test", name = "runner", version.ref =
 uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "uiautomator" }
 androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
