Update .gitlab-ci.yml to fix local.properties issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ before_script:
 
   # Not necessary, but just for surity
   - chmod +x ./gradlew
-
+  - echo "sdk.dir=${ANDROID_HOME}" > local.properties
 # Basic android and gradle stuff
 # Check linting
 lintDebug:
