refactored applicant object, added offers page, accepting and rejecting offers, offer adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <activity
             android:name=".ApplicantDetailsActivity"
             android:exported="false" />
+        <activity android:name="EmployeeOffersActivity"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
