--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.google.gms.google.services)
     alias(libs.plugins.google.android.libraries.mapsplatform.secrets.gradle.plugin)
+    alias(libs.plugins.firebase.crashlytics)
 }
 
 android {
@@ -67,4 +68,14 @@ dependencies {
 
     // UI Automator
     androidTestImplementation libs.uiautomator
+
+    //3rd part library
+    implementation libs.volley
+
+    //messaging library
+    implementation libs.firebase.messaging
+
+    //libraries for getting error messages from firebase
+    implementation libs.firebase.crashlytics
+    implementation libs.firebase.analytics
 }
