--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     implementation libs.firebase.storage
     implementation libs.play.services.maps
 
+    // Paypal dependencies
+    implementation libs.sdk.paypal.android.sdk
+    implementation libs.converter.gson
+
     testImplementation libs.junit
     testImplementation libs.mockito.core
 
