--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         <activity
             android:name=".util.employerView.HiredEmployeesActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".util.employerView.ProcessPaymentActivity"
+            android:exported="false" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBT-R7ng5ZRVcxk7cWhj6CdYapSI6VnQGA" />
