--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.QuickCash"
         tools:targetApi="31">
         <activity
+            android:name=".util.employeeView.PreferredEmployersActivity"
+            android:exported="false" />
+        <activity
             android:name=".util.employerView.HiredEmployeesActivity"
             android:exported="false" />
 
