Implemented code and created a new class FirebasePreferredEmployerJobPostNotifier to send notification when a new job is posted

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     //libraries for getting error messages from firebase
     implementation libs.firebase.crashlytics
     implementation libs.firebase.analytics
+
+    //auth library
+    implementation libs.google.auth.library.oauth2.http
 }
