--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,16 @@
         android:theme="@style/Theme.QuickCash"
         tools:targetApi="31">
         <activity
+            android:name=".util.ratingSystem.RatingActivity"
+            android:exported="false" />
+        <activity
             android:name=".util.employerView.HiredEmployeesActivity"
             android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBT-R7ng5ZRVcxk7cWhj6CdYapSI6VnQGA" />
+
         <activity
             android:name=".util.employeeView.EmployerProfileActivity"
             android:exported="false" />
