Fixed build.gradle to merge duplicate files and updated FirebasePreferredEmployerJobPostNotifier to retrieve name correctly

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,15 @@ android {
     buildFeatures {
         viewBinding true
     }
+git
+    packagingOptions {
+        merge 'META-INF/INDEX.LIST'
+        merge 'META-INF/LICENSE'
+        merge 'META-INF/LICENSE.txt'
+        merge 'META-INF/NOTICE'
+        merge 'META-INF/NOTICE.txt'
+        merge 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
