Final commit - Iteration 3: Refactored classes to make the application flow properly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".util.employeeView.EmployeeApplicationsActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.JobApplicationActivity"
+            android:name=".util.employeeView.JobApplicationActivity"
             android:exported="false" />
         <activity
             android:name=".ui.ResetPasswordActivity"
